wal-macros/tests/rsx_macro_tests/fragments/fragment_fail.stderr
error: This opening fragment does not have a coressponding closing fragment. (hint: try adding `</>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:6:12
  |
6 |     rsx! { <> };
  |            ^^

error: This opening fragment does not have a coressponding closing fragment. (hint: try adding `</>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:7:14
  |
7 |     rsx! { <><> };
  |              ^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:8:19
  |
8 |     rsx! { <><div></> };
  |                   ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<div>`)
 --> tests/rsx_macro_tests/fragments/fragment_fail.rs:9:14
  |
9 |     rsx! { <></div></> };
  |              ^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:10:12
   |
10 |     rsx! { </> };
   |            ^^^

error: This closing tag does not have a corresponding opening tag. (hint: try adding `<key>`)
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:11:23
   |
11 |     rsx! { <key="key"></key> };
   |                       ^^^^^^

error: This closing fragment does not have a corresponding opening fragment. (hint: try adding `<>`)
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:12:17
   |
12 |     rsx! { <key></> };
   |                 ^^^

error: Expected a literal or an expression block
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:13:17
   |
13 |     rsx! { <key=></> };
   |                 ^

error: Fragment supports only a single `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:14:24
   |
14 |     rsx! { <key="key1" key="key2"></> };
   |                        ^^^

error: Fragment supports only the `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:15:13
   |
15 |     rsx! { <other_attr="attr value"></> };
   |             ^^^^^^^^^^

error: Fragment supports only a single `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:16:23
   |
16 |     rsx! { <key="key" other_attr="attr value"></> };
   |                       ^^^^^^^^^^

error: Fragment supports only the `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:17:13
   |
17 |     rsx! { <other_attr="attr value" key="key"></> };
   |             ^^^^^^^^^^

error: Fragment supports only the `key` attribute
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:18:13
   |
18 |     rsx! { <other_attr1="attr value" other_attr2="attr val"></> };
   |             ^^^^^^^^^^^

error[E0599]: `NonDisplayStruct` doesn't implement `std::fmt::Display`
  --> tests/rsx_macro_tests/fragments/fragment_fail.rs:19:17
   |
19 |     rsx! { <key={NonDisplayStruct}></> };
   |                 ^^^^^^^^^^^^^^^^^^ `NonDisplayStruct` cannot be formatted with the default formatter
   |
  ::: tests/rsx_macro_tests/fragments/../utils/non_display_struct.rs
   |
   | pub struct NonDisplayStruct;
   | ---------------------------
   | |
   | method `to_string` not found for this struct
   | doesn't satisfy `NonDisplayStruct: ToString`
   | doesn't satisfy `NonDisplayStruct: std::fmt::Display`
   |
   = note: the following trait bounds were not satisfied:
           `NonDisplayStruct: std::fmt::Display`
           which is required by `NonDisplayStruct: ToString`
note: the trait `std::fmt::Display` must be implemented
  --> $RUST/core/src/fmt/mod.rs
   |
   | pub trait Display {
   | ^^^^^^^^^^^^^^^^^
